--- a/gb/23/6/1/n14007975.md
+++ b/gb/23/6/1/n14007975.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>前跨国公司华人高管：中共派往德国大量特务</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>前跨国公司华人高管：中共往德国派大量特务</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14008273-p1826191a204355179.jpg" />
 <h6>2011年6月8日，中共“610”特务因刺探法轮功情报被德国下萨克森州高级法院判罪。图为此高级法院。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年06月01日讯】（大纪元记者罗琼报导）近日中共在美国的两特工陈军和林峰，因直接参与中共对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的跨国迫害而被美国联邦调查局逮捕后，遭美司法部起诉。“这一举动是在震摄为中共卖命的特务们，也让全世界看到中共在威胁世界。”曾任一家跨国科技公司部门经理的吴文昕告诉大纪元记者。</p>
-<p>现已退休在德国居住的吴文昕，曾是瑞典和瑞士的一家全球技术领先的跨国集团ABB的工程师，也是该企业在全球电网自动化市场的销售经理。因中国是该公司的一家大客户，他曾和中共企业高层个别官员建立了良好的关系。1995年他开始修炼<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，曾多年担任德国和欧洲法轮大法协会的负责人。他因此也被中共<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C610%E2%80%9D.md#1">“610”</a>高层盯住。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C610%E2%80%9D.md#1">“610”</a>是1999年6月10日，在江泽民的指令下，中共中央成立的一个超越政府和法律的非法机构，专门指挥和实施对法轮功的迫害。</p>
+	<p>【大纪元2023年06月01日讯】（大纪元记者罗琼报导）近日中共在美国的两特工陈军和林峰，因直接参与中共对法轮功的跨国迫害而被美国联邦调查局逮捕后，遭美司法部起诉。“这一举动是在震摄为中共卖命的特务们，也让全世界看到中共在威胁世界。”曾任一家跨国科技公司部门经理的吴文昕告诉大纪元记者。</p>
+<p>现已退休在德国居住的吴文昕，曾是瑞典和瑞士的一家全球技术领先的跨国集团ABB的工程师，也是该企业在全球电网自动化市场的销售经理。因中国是该公司的一家大客户，他曾和中共企业高层个别官员建立了良好的关系。1995年他开始修炼法轮功，曾多年担任德国和欧洲法轮大法协会的负责人，因此也被中共“610”高层盯住。</p>
+<p>“610”是1999年6月10日，在江泽民的指令下，中共中央成立的一个超越政府和法律的非法机构，专门指挥和实施对法轮功的迫害。</p>
 <p>由于吴文昕的经历和身份，他曾获得有关法轮功的中共内部消息，也获得德方情报机构的信息。他说，中共特务以为他们自己很聪明，其实他们的举动都在西方情报部门的掌控之中，至今还没有惊动他们，也是人家想把这些人一网打尽而已。</p>
-<h2>中共“610”派往德国大量特务</h2>
-<p>吴文昕说，2005年他获得一个确切的消息，中共“610”内部召开了一个重要的会议，要针对海外法轮功的重点目标下手破坏。“他们内部有个所谓的说法‘一山、五虎、四大’。‘一山指在纽约的龙泉山（法轮功学员的重要基地），‘五虎’是指大纪元、新唐人、明慧网、希望之声、Gala（神韵前身），‘四大’即对中共来讲的四大灾区：美国、加拿大、台湾、德国。”他还得知，中共从2005年起就开始把大量的特务派往海外迫害法轮功。</p>
+<h2>中共“610”往德国派大量特务</h2>
+<p>吴文昕说，2005年他获得一个确切的消息，中共“610”内部召开了一个重要的会议，要针对海外法轮功学员办的大纪元、新唐人、明慧网、希望之声、Gala（神韵前身）以及法轮功学员修建的龙泉寺进行重点破坏，还有在美国、加拿大、台湾、德国的法轮功学员进行重点干扰。他还得知，中共从2005年起就开始把大量的特务派往海外迫害法轮功。</p>
 <p>2005年5月，前中共外交官陈用林脱离了中共驻悉尼总领馆，10月底陈与逃到澳洲的前天津市国保局官员郝凤军到欧洲议会演讲、作证后，在德国接受了德国之声的采访。</p>
 <p>在该电台的报导中陈用林说，“中共在澳洲派出了1,000个特工和线人。”“几乎没有什么中国领馆不能打听到的（消息）。”他还阐述了自己出走的原因，其中一个是他对受迫害的法轮功和其他的政治、宗教异己人士表示同情。“我本人不是法轮功成员，但是比较了解法轮功，他们实际上不是像中共所宣传的那样，因为他们的基本理念是‘真、善、忍’，是比较符合人性的。”</p>
 <p>郝凤军说自己在2000年调入天津市“610”办公室，但2003年不愿在“法轮功组”工作，就调离了那里。“610”的警察“都很清楚法轮功学员到底怎么样，法轮功学员和我们所接触的真正的犯罪分子是不一样的，一个最基本的区别是，法轮功学员不会说谎”。</p>
@@ -21,8 +21,8 @@
 <p>在2003年，德国的情报部门官员就开始主动和吴文昕联系，想了解法轮功在德国的情况。另外，德国政府也认识到法轮功是个和平的修炼团体，出于保护法轮功学员的目的，情报官员也向他透露了有关中共针对德国法轮功学员从事的间谍活动。</p>
 <p>“据我了解，中共针对法轮功安设在德国、欧洲的特务的任务是，渗透到法轮功学员内部来分裂学员、败坏大法名誉、破坏干扰法轮功的活动。”</p>
 <p>吴文昕举了一例，香港的王旭庆（读音王耀庆），此人被明慧网于<span lang="EN-US">2003</span>年<span lang="EN-US">7</span>月<span lang="EN-US">14</span>日曝光为中共特务。他说，王曾来到欧洲（到过德国），以精进的法轮功学员自居，骗取了不少法轮功学员的信任，在学员之间搞分裂，到处打听法轮功的活动，提前给中方通风报信，起破坏作用。</p>
-<p>记者获悉，在<span lang="EN-US">2002</span>年至<span lang="EN-US">2003</span>年间，澳洲法轮功学员、艺术家张翠英在欧洲一些国家举办巡回画展，她曾在中国遭受过非法拘留迫害。回到澳洲后，张翠英以举办个人画展的形式，在全球许多国家揭露中共对法轮功的迫害，受到当地各阶层包括媒体的支持和关注，她成为中共的眼中钉。</p>
-<p>那时王旭庆正在欧洲活动，在她得知张翠英要到东欧举办画展的计划后，那些国家的中使馆就出面干扰，使画展在当地举办前甚至当天被取消。例如：<span lang="EN-US">2003</span>年<span lang="EN-US">10</span>月，在一位保加利亚女议员的支持下原订在该国国家议会大楼举办的张翠英画展，由于中共使馆的施压而被迫临时取消。</p>
+<p>记者获悉，在<span lang="EN-US">2002</span>年至<span lang="EN-US">2003</span>年间，澳洲法轮功学员、艺术家章翠英在欧洲一些国家举办巡回画展，她曾在中国遭受过非法拘留迫害。回到澳洲后，章翠英以举办个人画展的形式，在全球许多国家揭露中共对法轮功的迫害，受到当地各阶层包括媒体的支持和关注，她成为中共的眼中钉。</p>
+<p>那时王旭庆正在欧洲活动，在她得知章翠英要到东欧举办画展的计划后，那些国家的中使馆就出面干扰，使画展在当地举办前甚至当天被取消。例如：<span lang="EN-US">2003</span>年<span lang="EN-US">10</span>月，在一位保加利亚女议员的支持下原订在该国国家议会大楼举办的章翠英画展，由于中共使馆的施压而被迫临时取消。</p>
 <h2>首例“610”间谍被德国法院判罪</h2>
 <p>在2005年，德国安全部门就发现德华裔John Zhou（原名为周超英，曾用名周修）和中共方面有邮件往来。吴文昕说，当时德方安全部门没有惊动他，是想找到他的幕后者。</p>
 <p>周是学医的，很早来德留学，与前妻离婚后，和一德国女子结婚，成为德国公民。他的前岳父曾是北京副市长。周自称1995年开始对法轮功感兴趣。</p>
@@ -32,7 +32,7 @@
 <p>法轮大法协会是在德国注册的团体，其许多成员是德国公民，应受德国宪法的保护。</p>
 <p>德国媒体《明镜周刊》报导，2010年5月，德国检察院对周超英以间谍罪正式起诉。2011年6月8日，周被德国下萨克森州高级法院法庭判罪，缓刑两年，并被罚款1.5万欧元。</p>
 <p>吴文昕表示，周超英按理会判5年徒刑，罚款20万欧元，后来改为轻判。在他看来，原因为：“一方面，周超英在确凿的事实面前全盘承认自己的罪行，同时在法庭上哭哭啼啼演戏，诬蔑法轮功，把自己伪装成受害者，骗取法官的同情。另一方面，有中共高层对德国的渗透，加上德方因与中共的经济贸易而实行绥靖政策，当时默克尔执政。”</p>
-<p>周超英被判是迄今为止在德国乃至欧洲的一起最大的针对法轮功的反<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">中共间谍</a>案。吴文昕说，其实大大小小的间谍事件还有不少，那些人是以不同的面目出现的，他又举一例。</p>
+<p>周超英被判是迄今为止在德国乃至欧洲的一起最大的针对法轮功的反中共间谍案。吴文昕说，其实大大小小的间谍事件还有不少，那些人是以不同的面目出现的，他又举一例。</p>
 <p>二十年多前，在德国杜塞尔多夫市的林姓女留学生，自称自己是法轮功学员，混入学员中。她到北京天安门以法轮功学员的身份去打横幅，被警察抓到拘留所里，后来被劳教。2003年她被释放后回德国，立即公开为中共站台，声称中国劳教所里吃得很好，生活得很好，她所经历的和明慧网报导的不一样。</p>
 <p>“其实，德国情报局早就怀疑上她了，她只是一个留学生，却在银行里存有很多钱，还在德国买了房子。德方还发现她有乱来的男女关系。人家知道，真正修炼法轮功的人没有这种行为。”吴文昕说。</p>
 <h2>德国情报机构的及时保护</h2>
@@ -45,45 +45,36 @@
 <p>他表示，“这次美国向迫害法轮功的中共特务发出警告，也是对中共政府发出警告：我现在不客气了。这也是美国要与中共脱钩的进一步表现，不依赖中共，也就不害怕失去经济利益了，同时美国想让全世界知道中共一直在威胁世界。”</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3288791.md#1">横河：为什么刺探法轮功情报是间谍罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13977825.md#1">王友群：美国起诉44名中共特务的启示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006432.md#1">陈军贿美国税局案 揭共谍指挥部在天津</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006884.md#1">王友群：中共特务落网 昨日座上宾今成阶下囚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3288791.md#1">横河：为什么刺探法轮功情报是间谍罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/21/n13977825.md#1">王友群：美国起诉44名中共特务的启示</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/30/n14006432.md#1">陈军贿美国税局案 揭共谍指挥部在天津</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/30/n14006884.md#1">王友群：中共特务落网 昨日座上宾今成阶下囚</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999285.md#1">【古道人生】未婚夫突然疯了未婚妻怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004224.md#1">传奇名妓苏小小到底是谁？连乾隆皇帝都去过苏小小墓！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004563.md#1">【未解之谜】中国境内的史前避难所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005612.md#1">美国修女下葬4年肉身不腐 被信徒视为神迹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/5/12/28/n1170051.md#1">【风云人物】直言率真 为民喉舌的东坡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007516.md#1">【新闻大破解】美警告中共担不起犯台代价</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007588.md#1">【新唐人大视野】习新班子6人同背景 藏何密码</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007577.md#1">【中国禁闻】危机前所未有 习近平再提惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006840.md#1">习开国安会称迎惊涛骇浪 分析：凸显末日危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006628.md#1">实验室是否泄病毒 中共专家：不排除任何可能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006622.md#1">岳山：“团派小弟”掌智库 吹捧习式经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007169.md#1">41岁叶家妤怀第三胎 胞妹白家绮感动抱着哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006719.md#1">杨丽花纪录片开拍：歌仔戏是我的生命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006168.md#1">考上台师大EMBA 47岁蔡君茹：得知录取手脚发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006532.md#1">布鲁斯·威利病情严重 好友阿诺吐露心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007583.md#1">满脸皱纹双眼凸出 李连杰苍老模样引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993859.md#1">研究发现脂肪肝源于肠道菌！灭菌需戒2种饮食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005513.md#1">40岁以后易健忘 小心这9件事加速大脑老化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007259.md#1">10种常见食物对小猫有害 吃了可能会死掉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/25/n14003921.md#1">这种体质血压易飙升 4招稳血压 控盐还有1秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006611.md#1">为什么女性的下巴会长毛？应该如何处理？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294567.md#1">神秘奇观：雷震飞石 奇异预兆应验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299362.md#1">【晚间新闻】巴黎奥运塞纳河开幕 安保规模空前</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299360.md#1">【全球新闻】巴黎奥运惊魂 高铁遇袭瘫痪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299352.md#1">【中国禁闻】贿赂美官员迫害法轮功 两侨领认罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298566.md#1">报告：中共利用军演盗窃西方先进战机技术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298583.md#1">游客过多 日本餐厅想出一招来应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298682.md#1">大陆一电动汽车自燃 厂家员工到场先撬车标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297939.md#1">传胡歌获90后妻子陪伴 黄曦宁穿着朴素低调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298693.md#1">赵丽颖带5岁儿子与父母聚餐 画面温馨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298646.md#1">贝克汉姆夫妇结婚25周年 两人户外恩爱照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298560.md#1">王兵执导新片入围威尼斯 疑踩红线遭陆网封杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296813.md#1">超级食物酪梨怎么切 简单4步骤学起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297898.md#1">这蔬菜让人百吃不厌 专家说多多益善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298289.md#1">为何太空人在太空中避免吃这5种食物？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292077.md#1">牙龈红肿出血又松动？两招自救</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/1/n14007975.htm">前跨国公司华人高管：中共派往德国大量特务</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/1/n14007975.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/1/n14007975.htm">前跨国公司华人高管：中共往德国派大量特务</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/1/n14007975.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
